website/i18n/zh-hant/docusaurus-plugin-content-docs/version-3.8.1/guides/markdown-features/markdown-features-intro.mdx
---
id: introduction
description: Docusaurus uses MDX. Find out more about Docusaurus-specific features when writing Markdown.
slug: /markdown-features
---

# Markdown 功能

import BrowserWindow from '@site/src/components/BrowserWindow';

Docusaurus 使用 **[Markdown](https://commonmark.org/)** 作為其主要內容撰寫格式。

:::tip[學習 Markdown]

你可以[在 10 分鐘內學會 Markdown](https://commonmark.org/help/)。

:::

Docusaurus 使用現代工具幫助你建立**互動式文檔**。

**[MDX](https://mdxjs.com/)** 編譯器將 **Markdown 文件轉換為 React 組件**，並允許你在 Markdown 內容中使用 JSX。這讓你能輕鬆地在內容中穿插 React 組件，創造愉悅的學習體驗。

:::tip[使用 MDX 遊樂場]

**[MDX 遊樂場](https://mdxjs.com/playground/)** 是你最好的新朋友！

這是一個非常有用的除錯工具，能展示 MDX 編譯器如何將 Markdown 轉換為 React。

**選項**：選擇正確的格式（MDX 或 CommonMark）以及 Docusaurus 使用的以下插件：`remark-gfm`、`remark-directive`、`rehype-raw`。

:::

## MDX 與 CommonMark 的比較 {#mdx-vs-commonmark}

Docusaurus 使用 MDX 編譯器將 `.md` 和 `.mdx` 文件編譯為 React 組件，但**語法的解釋方式可能因設置而異**。

MDX 編譯器支援 [2 種格式](https://mdxjs.com/packages/mdx/#optionsformat)：

- [MDX 格式](https://mdxjs.com/docs/what-is-mdx/)：一個強大的解析器，允許使用 JSX
- [CommonMark 格式](https://commonmark.org/)：一個標準合規的 Markdown 解析器，不允許使用 JSX

預設情況下，**Docusaurus v3 對所有文件（包括 `.md` 文件）使用 MDX 格式**，這是出於歷史原因。

你可以透過 [`siteConfig.markdown.format`](../../api/docusaurus.config.js.mdx#markdown) 設置或 `mdx.format: md` 前置元數據**選擇使用 CommonMark**。

:::tip[如何使用 CommonMark]

如果你計劃使用 CommonMark，我們推薦 [`siteConfig.markdown.format: 'detect'`](../../api/docusaurus.config.js.mdx#markdown) 設置。系統會根據文件擴展名自動選擇合適的格式：

- `.md` 文件將使用 CommonMark 格式
- `.mdx` 文件將使用 MDX 格式

:::

:::danger[實驗性 CommonMark 支援]

CommonMark 支援目前是**實驗性**功能，並且有一些[限制](https://github.com/facebook/docusaurus/issues/9092)。

:::

## 標準功能 {#standard-features}

Markdown 是一種語法，讓你能以易讀的格式撰寫格式化內容。

```md
### My Doc Section

Hello world message with some **bold** text, some _italic_ text, and a [link](/)

![img alt](/img/docusaurus.png)
```

```mdx-code-block
<BrowserWindow>

<h3>My Doc Section</h3>

Hello world message with some **bold** text, some _italic_ text and a [link](/)

![img alt](/img/docusaurus.png)

</BrowserWindow>
```

<details>

<summary>Markdown is declarative</summary>

Some may assume a 1-1 correlation between Markdown and HTML, e.g., `![Preview](/img/docusaurus.png)` will always become `<img src="/img/docusaurus.png" alt="Preview" />`, as-is. However, _that is not the case_.

The Markdown syntax `![message](url)` only declaratively tells Docusaurus that an image needs to be inserted here, but we may do other things like transforming a [file path to URL path](./markdown-features-assets.mdx#images), so the generated markup may differ from the output of other Markdown renderers, or a naïve hand-transcription to the equivalent JSX/HTML code.

In general, you should only assume the _semantics_ of the markup (` ``` ` fences become [code blocks](./markdown-features-code-blocks.mdx); `>` becomes [quotes](#quotes), etc.), but not the actual compiled output.

</details>

## 前置元數據 {#front-matter}

前置元數據用於為你的 Markdown 文件添加元數據。所有內容插件都有自己的前置元數據架構，並使用前置元數據來豐富從內容或其他配置推斷出的預設元數據。

前置元數據位於文件的頂部，由三個破折號 `---` 包圍。內容以 [YAML](https://yaml.org/spec/1.2.2/) 格式解析。

```md
---
title: My Doc Title
more_data:
  - Can be provided
  - as: objects
    or: arrays
---
```

:::info

每個官方插件的 API 文檔列出了支援的屬性：

- [文檔前置元數據](../../api/plugins/plugin-content-docs.mdx#markdown-front-matter)
- [部落格前置元數據](../../api/plugins/plugin-content-blog.mdx#markdown-front-matter)
- [頁面前置元數據](../../api/plugins/plugin-content-pages.mdx#markdown-front-matter)

:::

:::tip[強化你的 front matter]

使用 [Markdown 配置中的 `parseFrontMatter` 函數](../../api/docusaurus.config.js.mdx#markdown) 來提供自訂的 front matter 解析器，或增強預設解析器。

你可以重複使用預設解析器，並用自訂的專有邏輯進行包裝。這讓你能實作方便的 front matter 轉換、捷徑，或是整合外部系統使用 Docusaurus 插件不支援的 front matter。

```js title="docusaurus.config.js"
export default {
  markdown: {
    // highlight-start
    parseFrontMatter: async (params) => {
      // 重複使用預設解析器
      const result = await params.defaultParseFrontMatter(params);

      // 處理 front matter 描述中的佔位符
      result.frontMatter.description =
        result.frontMatter.description?.replaceAll('{{MY_VAR}}', 'MY_VALUE');

      // 建立自訂的 front matter 捷徑
      if (result.frontMatter.i_do_not_want_docs_pagination) {
        result.frontMatter.pagination_prev = null;
        result.frontMatter.pagination_next = null;
      }

      // 重新命名來自其他系統的不支援 front matter
      if (result.frontMatter.cms_seo_summary) {
        result.frontMatter.description = result.frontMatter.cms_seo_summary;
        delete result.frontMatter.cms_seo_summary;
      }

      return result;
    },
    // highlight-end
  },
};
```

:::

## 引用 {#quotes}

Markdown 引用擁有精美的樣式：

```md
> Easy to maintain open source documentation websites.
>
> — Docusaurus
```

<BrowserWindow>

> Easy to maintain open source documentation websites.
>
> — Docusaurus

</BrowserWindow>

## 詳情區塊 {#details}

Markdown 可以嵌入 HTML 元素，而 [`details`](https://developer.mozilla.org/en-US/docs/Web/HTML/Element/details) HTML 元素會被賦予精美的樣式：

````md
### Details element example

<details>
  <summary>Toggle me!</summary>

  This is the detailed content

  ```js
  console.log("Markdown features including the code block are available");
  ```

  You can use Markdown here including **bold** and _italic_ text, and [inline link](https://docusaurus.io)
  <details>
    <summary>Nested toggle! Some surprise inside...</summary>

    😲😲😲😲😲
  </details>
</details>
````

````mdx-code-block
<BrowserWindow>

<h3>Details element example</h3>

<details>
  <summary>Toggle me!</summary>

  This is the detailed content

  ```js
  console.log("Markdown features including the code block are available");
  ```

  You can use Markdown here including **bold** and _italic_ text, and [inline link](https://docusaurus.io)
  <details>
    <summary>Nested toggle! Some surprise inside...</summary>

    😲😲😲😲😲
  </details>
</details>

</BrowserWindow>
````

:::info

你可能會希望將 `<summary>` 保持在同一行。請注意 [MDX 會為換行符號建立額外的 HTML `<p>` 段落](https://mdxjs.com/migrating/v2/#jsx)。如有疑問，可使用 [MDX 遊樂場](https://mdxjs.com/playground/) 來排查 `<details>` 的渲染問題。

:::